--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -28,9 +28,11 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         android:contentDescription="@string/donuts"
+        android:onClick="showDonutOrder"
         android:src="@drawable/donut_circle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textIntro" />
+        app:layout_constraintTop_toBottomOf="@+id/textIntro"
+        tools:ignore="OnClick" />
 
     <ImageView
         android:id="@+id/ice_cream"
@@ -40,9 +42,11 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         android:contentDescription="@string/ice_cream"
+        android:onClick="showIceCreamOrder"
         android:src="@drawable/froyo_circle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/donut" />
+        app:layout_constraintTop_toBottomOf="@+id/donut"
+        tools:ignore="OnClick" />
 
     <ImageView
         android:id="@+id/froyo_circle"
@@ -52,9 +56,11 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         android:contentDescription="@string/froyo_circle"
+        android:onClick="showFroyoOrder"
         android:src="@drawable/icecream_circle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ice_cream" />
+        app:layout_constraintTop_toBottomOf="@+id/ice_cream"
+        tools:ignore="OnClick" />
 
     <TextView
         android:id="@+id/donut_description"
