--- a/app/src/main/res/layout-land/fragment_first.xml
+++ b/app/src/main/res/layout-land/fragment_first.xml
@@ -22,77 +22,74 @@
 
     <ImageView
         android:id="@+id/donut"
-        android:layout_width="wrap_content"
+        android:layout_width="242dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:contentDescription="@string/donuts"
         android:onClick="showDonutOrder"
         android:src="@drawable/donut_circle"
+        app:layout_constraintEnd_toStartOf="@+id/ice_cream"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textIntro"
         tools:ignore="OnClick" />
 
     <ImageView
         android:id="@+id/ice_cream"
-        android:layout_width="wrap_content"
+        android:layout_width="242dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         android:contentDescription="@string/ice_cream"
         android:onClick="showIceCreamOrder"
         android:src="@drawable/froyo_circle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/donut"
-        tools:ignore="OnClick" />
+        app:layout_constraintEnd_toStartOf="@+id/froyo_circle"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/donut"
+        app:layout_constraintTop_toBottomOf="@+id/textIntro" />
 
     <ImageView
         android:id="@+id/froyo_circle"
-        android:layout_width="wrap_content"
+        android:layout_width="243dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
         android:contentDescription="@string/froyo_circle"
         android:onClick="showFroyoOrder"
         android:src="@drawable/icecream_circle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ice_cream"
-        tools:ignore="OnClick" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/ice_cream"
+        app:layout_constraintTop_toBottomOf="@+id/textIntro" />
 
     <TextView
         android:id="@+id/donut_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="40dp"
         android:text="@string/donuts"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/donut"
-        app:layout_constraintTop_toTopOf="@+id/donut" />
+        app:layout_constraintEnd_toEndOf="@+id/donut"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/donut"
+        app:layout_constraintTop_toBottomOf="@+id/donut" />
 
     <TextView
         android:id="@+id/froyo_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="24dp"
         android:text="@string/froyo_circle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/froyo_circle"
-        app:layout_constraintTop_toTopOf="@+id/froyo_circle" />
+        app:layout_constraintEnd_toEndOf="@+id/froyo_circle"
+        app:layout_constraintStart_toStartOf="@+id/froyo_circle"
+        app:layout_constraintTop_toTopOf="@+id/ice_cream_description" />
 
     <TextView
         android:id="@+id/ice_cream_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
         android:text="@string/ice_cream"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ice_cream"
-        app:layout_constraintTop_toTopOf="@+id/ice_cream" />
+        app:layout_constraintEnd_toEndOf="@+id/ice_cream"
+        app:layout_constraintStart_toStartOf="@+id/ice_cream"
+        app:layout_constraintTop_toTopOf="@+id/donut_description" />
+
 </android.support.constraint.ConstraintLayout>
