--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -111,7 +111,8 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/label_spinner"
         app:layout_constraintStart_toEndOf="@+id/contact_label"
-        app:layout_constraintTop_toBottomOf="@+id/address_text" />
+        app:layout_constraintTop_toBottomOf="@+id/address_text"
+        />
 
     <EditText
         android:id="@+id/email_text"
@@ -128,7 +129,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/email_label"
-        app:layout_constraintTop_toBottomOf="@+id/contact_text" />
+        app:layout_constraintTop_toBottomOf="@+id/contact_text"
+        />
 
     <TextView
         android:id="@+id/email_label"
@@ -156,6 +158,7 @@
         app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -199,5 +202,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/contact_text"
         app:layout_constraintTop_toBottomOf="@+id/address_text" />
+
+    <EditText
+        android:id="@+id/phone_call"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="Make a phone call"
+        android:inputType="phone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
+        android:imeOptions="actionSend"/>
 
 </android.support.constraint.ConstraintLayout>
